# estudar-ia

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  biome.json  netlify.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
apps/ai-tutor-service/: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  openapi.json  project.json  pyproject.toml  pyrightconfig.json  sample.env
apps/ai-tutor-service/evals/physics/: README.md  fuvest_descriptive_dev.jsonl
apps/ai-tutor-service/scripts/: generate_openapi.py
apps/ai-tutor-service/src/: cli.py  main.py
apps/ai-tutor-service/src/ai_tutor/: main.py
apps/ai-tutor-service/src/ai_tutor/schemas/agent/: solution.py
apps/ai-tutor-service/src/ai_tutor/schemas/common/: base.py
apps/ai-tutor-service/src/app/: cli.py  main.py
apps/ai-tutor-service/src/app/api/: app.py  dependencies.py  state.py
apps/ai-tutor-service/src/app/api/routes/: physics.py
apps/ai-tutor-service/src/app/application/ports/: physics_descriptive_port.py  physics_port.py
apps/ai-tutor-service/src/app/application/services/: eval_service.py  physics_descriptive_service.py  physics_service.py
apps/ai-tutor-service/src/app/application/signatures/: physics_descriptive_signature.py  physics_signature.py
apps/ai-tutor-service/src/app/cli/: run_case.py
apps/ai-tutor-service/src/app/core/: observability.py  observability_contract.py  settings.py  unit_registry.py
apps/ai-tutor-service/src/app/data/agents/: physics_agent.py  physics_descriptive_agent.py
apps/ai-tutor-service/src/app/data/dspy/: dspy_config.py
apps/ai-tutor-service/src/app/runner/: artifact.py  run_artifact.py  run_case.py  run_eval.py  utils.py
apps/ai-tutor-service/src/application/ports/: physics_descriptive_port.py
apps/ai-tutor-service/src/application/services/: physics_descriptive_service.py
apps/ai-tutor-service/src/core/: settings.py
apps/ai-tutor-service/src/data/agents/: dspy_config.py  physics_descriptive_agent.py
apps/ai-tutor-service/tests/api/: conftest.py
apps/ai-tutor-service/tests/api/routes/: test_physics_route.py
apps/ai-tutor-service/tests/application/services/: test_eval_service.py  test_physics_descriptive_service.py  test_physics_service.py
apps/ai-tutor-service/tests/cli/: test_run_artifact.py
apps/ai-tutor-service/tests/data/tools/: test_physics_tools.py
apps/ai-tutor-service/tests/domain/models/: test_physics.py  test_physics_model.py
apps/ai-tutor-service/tests/runner/: test_run_artifact.py  test_run_eval.py
apps/ai-tutor-service/tests/schemas/agent/: test_solution.py
(+146 files in other folders)
